# optiflow

./: .dockerignore  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json
.agent/workflows/: coding-standards.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: explainer.rs  lib.rs  main.rs  solver.rs  state.rs  validator.rs  web_server.rs
src-tauri/src/commands/: crud.rs  demo.rs  explain.rs  mod.rs  solver_commands.rs
src-tauri/src/models/: calendar.rs  enums.rs  master.rs  mod.rs  model.rs  relationships.rs  solver_types.rs  transactions.rs
