[package]
name = "optiflow"
version = "0.1.0"
description = "OptiFlow Supply Chain Optimizer — Enterprise-grade MILP solver with guided UX"
authors = ["OptiFlow Team"]
edition = "2021"

[lib]
name = "optiflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Web server binary (for Docker / cloud deployment)
[[bin]]
name = "optiflow-web"
path = "src/web_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
highs = "1"
thiserror = "2"
log = "0.4"

# Web server deps
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

[features]
default = ["tauri-app"]
tauri-app = ["tauri", "tauri-plugin-opener"]

